# a2_description

./: CMakeLists.txt  package.xml
config/: camera_info.yaml  camera_info_real.yaml  camera_info_sim.yaml
launch/: display.launch.py  visualize.launch.py
mjcf/: a2.xml  a2_maze3.xml  a2_rotated.xml  scene.maze3.xml  scene.maze3_meshes.xml  scene.maze3_meshes_tall.xml  scene_corridor_05.xml  scene_corridor_06.xml  scene_corridor_07.xml  scene_corridor_08.xml  scene_flat.xml  scene_maze_v2.xml  scene_maze_v2_bar.xml  scene_obstacles.xml  scene_outdoor.xml  scene_test_meshes.xml
mjcf/meshes/: umbrella.mtl
rviz/: default.rviz  navigation.rviz
src/: a2_bridge.cpp
urdf/: a2.urdf
